styles/athlete.css
/*....................................................................................................................*/

.atl /* athlete */
{
  width         : var( --athlete-size ) ;
  height        : var( --athlete-size ) ;
  background    : #333 ;
  border-radius : 50% ;
  border-color  : var( --white ) ;
  border-width  : var( --border-full ) ;
  border-style  : solid ;
  box-sizing    : border-box ;
  position      : absolute ;
  stroke        : #333
}

.atl_art{ position : absolute } /* athlete art */
.atl_fil{ fill : var( --white ) } /* athlete fill */

/*....................................................................................................................*/

.atl_sel_zon /* athlete selector zone */
{
  width    : var( --athlete-size ) ;
  height   : var( --athlete-size ) ;
  position : absolute
}

.atl_sel /* athlete selector */
{
  fill         : rgba( 255 , 255 , 255 , 0 ) ;
  stroke-width : 0 ;
  transition   : fill 0.3s
}

.atl_sel:hover{ fill : rgba( 255 , 255 , 255 , 0.3 ) }

/*....................................................................................................................*/

.blue
{
  background : #400068 ;
  stroke     : #400068 ;
}
.green
{
  background : #570 ;
  stroke     : #570 ;
}

